improve styles applied on operation columns

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -158,13 +158,13 @@
 
         &:not(.dash-no-data),
         &:not(.dash-no-filter) {
-            tr th.last-header-row {
+            tr th.dash-last-header-row {
                 border-bottom: none !important;
             }
         }
 
         &:not(.dash-no-data) {
-            tr th.filter-row {
+            tr th.dash-filter-row {
                 border-bottom: none !important;
             }
         }
