- rework - style as list view

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -224,6 +224,13 @@
             }
         }
 
+        &.dash-list-view {
+            td, th {
+                border-left: none !important;
+                border-right: none !important;
+            }
+        }
+
         .dash-filter.invalid {
             background-color: pink;
         }
