refactor out filter mapping logic from the filter factory

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -170,6 +170,10 @@
                     }
                 }
             }
+
+            &.invalid {
+                background-color: pink;
+            }
         }
 
         &:not(.dash-empty-11) {
