clean up selected cell css

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -392,8 +392,8 @@
         overflow-x: visible;
     }
 
-    .dash-spreadsheet-inner :not(.cell--selected) tr:hover,
-    tr:hover input :not(.cell--selected) {
+    .dash-spreadsheet-inner tr:hover,
+    tr:hover  {
         background-color: var(--hover);
     }
 
