keep selected--cell

--- a/src/dash-table/components/Table/Dropdown.css
+++ b/src/dash-table/components/Table/Dropdown.css
@@ -113,3 +113,8 @@
 .dash-spreadsheet .Select-control {
     padding-left: 2px;
 }
+
+.dash-spreadsheet .cell--selected .Select-control {
+    background-color: var(--selected-background);
+    border-radius: 0;
+}
