more specific selector

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -233,13 +233,15 @@
             }
         }
 
-        .cell-0-1,
-        .cell-1-1 {
-            flex: 1 0 auto;
-        }
+        &.dash-spreadsheet-inner {
+            .cell-0-1,
+            .cell-1-1 {
+                flex: 1 0 auto;
+            }
 
-        table {
-            width: 100%;
+            table {
+                width: 100%;
+            }
         }
 
         .selected-row {
