--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -233,7 +233,7 @@
             }
         }
 
-        &.dash-grow {
+        &.dash-fill-width {
             .cell-0-1,
             .cell-1-1 {
                 flex: 1 0 auto;
