--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -490,7 +490,7 @@
         }
 
         .column-header--delete::before {
-            content: 'x'
+            content: '×'
         }
 
         .column-header--edit::before {
