--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -1,4 +1,5 @@
 @import (reference) '~dash-table/style/reset.less';
+@import (reference) '~./font-awesome-polyfills.less';
 
 .fit-content-polyfill() {
     width: auto; // MS Edge, IE
@@ -406,8 +407,20 @@
         cursor: pointer;
         float: left;
         color: var(--faded-text-header);
-        font-size: 20px;
+
+        &.sort--asc {
+            .fa-sort-up();
+        }
+
+        &.sort--desc {
+            .fa-sort-down();
+        }
+
+        &.sort--none {
+            .fa-sort();
+        }
     }
+
     th:hover .sort {
         color: var(--accent);
     }
@@ -485,16 +498,20 @@
     }
 
     .dash-spreadsheet-inner {
-        .column-header--clear::before {
-            content: 'ø';
+        .column-header--clear {
+            .fa-eraser();
         }
 
-        .column-header--delete::before {
-            content: '×'
+        .column-header--delete {
+            .fa-trash();
         }
 
-        .column-header--edit::before {
-            content: '✎';
+        .column-header--edit {
+            .fa-pencil();
+        }
+
+        .column-header--hide {
+            .fa-eye-slash();
         }
 
         .column-header--clear,
