toggle column menu + states

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -104,6 +104,24 @@
         }
     }
 }
+
+.dash-spreadsheet-menu-item {
+    position: relative;
+
+    .show-hide-menu {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: 500;
+        background-color: #fafafa;
+        border: 1px solid #d3d3d3;
+
+        .show-hide-menu-item {
+            padding: 5px;
+        }
+    }
+}
+
 .dash-spreadsheet-container {
     .reset-css();
     display: flex;
