--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -220,6 +220,7 @@
                 flex: 0 0 auto;
                 left: 0;
                 position: sticky;
+                position: -webkit-sticky;
                 z-index: 400;
             }
 
