--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -104,19 +104,32 @@
     }
 }
 
-.dash-spreadsheet-menu-item {
-    position: relative;
+.dash-spreadsheet-menu {
+    display: flex;
+    flex-direction: row;
 
-    .show-hide-menu {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        z-index: 500;
-        background-color: #fafafa;
-        border: 1px solid #d3d3d3;
+    & > * {
+        padding-right: 5px;
+    }
 
-        .show-hide-menu-item {
-            padding: 5px;
+    .dash-spreadsheet-menu-item {
+        position: relative;
+
+        .show-hide-menu {
+            background-color: #fafafa;
+            border: 1px solid #d3d3d3;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            z-index: 500;
+
+            .show-hide-menu-item {
+                display: flex;
+                flex-direction: row;
+                padding: 5px;
+            }
         }
     }
 }
