--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -528,13 +528,24 @@
             cursor: pointer;
         }
 
+        .column-header--clear,
+        .column-header--delete,
+        .column-header--edit,
+        .column-header--hide {
+            &.disabled {
+                display: none;
+            }
+        }
+
         th:hover {
             .column-header--clear,
             .column-header--delete,
             .column-header--edit,
             .column-header--hide {
-                color: var(--accent);
-                opacity: 1;
+                &:not(.disabled) {
+                    color: var(--accent);
+                    opacity: 1;
+                }
             }
         }
     }
