- inherit overflow behavior from parent td/th - remove unused styling code - update changelog

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -363,6 +363,12 @@
             height: 30px;
 
             text-align: right;
+
+            div.dash-cell-value {
+                white-space: inherit;
+                overflow: inherit;
+                text-overflow: inherit;
+            }
         }
 
         th {
