--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -317,9 +317,7 @@
             }
 
             div.dash-cell-value {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
+                vertical-align: middle;
             }
 
             .cell-value-shadow {
