--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -317,6 +317,7 @@
             }
 
             div.dash-cell-value {
+                display: inline;
                 vertical-align: middle;
             }
 
