--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -364,6 +364,7 @@
             background-clip: padding-box;
             padding: 2px;
             overflow-x: hidden;
+            white-space: nowrap;
 
             height: 30px;
 
