Allow for cases in which max_page_count is none/null.

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -161,7 +161,7 @@ input.current-page, input.current-page::placeholder {
     color: black;
     border: none;
     width:30px;
-    text-align:right;
+    text-align:center;
     font-family: monospace;
     font-size: 10pt;
     margin: 0.5em;
@@ -170,6 +170,7 @@ input.current-page, input.current-page::placeholder {
 .page-number > .last-page {
     min-width: 30px;
     display: inline-block;
+    text-align: center;
     margin: 0.5em;
 }
 
