Add underline to input box.

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -157,6 +157,10 @@ button.previous-page, button.next-page, .current-page {
     display: inline-block;
 }
 
+input.current-page {
+    border-bottom: solid lightgrey 1px !important;
+}
+
 input.current-page, input.current-page::placeholder {
     color: black;
     border: none;
