Demo app global table filter case

--- a/demo/style.less
+++ b/demo/style.less
@@ -1,3 +1,16 @@
 html {
     font-size: 13px;
+
+    .demo-app-root {
+        input.dash-filter--case {
+            outline: none;
+            height: 18px;
+        }
+
+        input.dash-filter--case--sensitive {
+            border-color: hotpink;
+            border-radius: 4px;
+            border-width: 2px;
+        }
+    }
 }
