Align text to the left and use sans-serif for markdown cells.
This preserves alignment for code and lists.

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -441,6 +441,12 @@
                     white-space: inherit;
                     overflow: inherit;
                     text-overflow: inherit;
+
+		    &.cell-markdown {
+			text-align: left;
+			font-family: sans-serif;
+			display: inline-block;
+		    }
 		}
             }
 	}
