Preserve whitespace in block quotes.

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -446,6 +446,10 @@
 			text-align: left;
 			font-family: sans-serif;
 			display: inline-block;
+
+			blockquote {
+			    white-space: pre;
+			}
 		    }
 		}
             }
