height: 100% on td
see https://stackoverflow.com/questions/3215553/make-a-div-fill-an-entire-table-cell#comment40719119_7600749

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -494,6 +494,7 @@
              * tried it.
              */
             overflow-x: visible;
+            height: 100%;
 	}
 
 	.dash-spreadsheet-inner :not(.cell--selected) tr:hover,
