--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -399,6 +399,18 @@
 		}
             }
 
+        /*
+         * fixes Firefox td height bug on td > dropdown children
+         * bug should only appear on FF but
+         * @supports = scoped to Firefox only
+         * to minimize side effects
+         */
+        @supports (-moz-appearance:none) {
+			td.dropdown .dash-cell-value-container {
+				height: auto;
+			}
+		}
+
             th.dash-filter {
 		position: relative;
 
@@ -494,10 +506,6 @@
              * tried it.
              */
             overflow-x: visible;
-	}
-
- 	.dash-spreadsheet-inner td.dropdown:not([data-dash-column="string"]) {
-		height: 100%;
 	}
 
 	.dash-spreadsheet-inner :not(.cell--selected) tr:hover,
