--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -290,6 +290,8 @@
             &:not(.dash-empty-01) {
                 .cell-0-0,
                 .cell-1-0 {
+                    overflow: hidden;
+
                     tr {
                         td:last-of-type,
                         th:last-of-type {
