Table rendering and fragments alignment/sizing through iterative styling

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -287,8 +287,7 @@
                 }
             }
 
-            .cell-0-0,
-            .cell-1-0 {
+            .cell-0-0 {
                 overflow: hidden;
             }
 
@@ -454,7 +453,7 @@
                 padding: 2px;
                 overflow-x: hidden;
                 white-space: nowrap;
-                box-sizing: content-box;
+                box-sizing: border-box;
 
                 height: 30px;
 
