--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -306,9 +306,14 @@
                 .cell-0-0,
                 .cell-1-0 {
                     tr {
-                        td:last-of-type,
-                        th:last-of-type {
-                            border-right: none !important;
+                        td, th {
+                            &.phantom-cell {
+                                border-color: transparent !important;
+                            }
+
+                            &:last-of-type {
+                                border-right: none !important;
+                            }
                         }
                     }
                 }
