height -> min-height

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -465,7 +465,7 @@
                 white-space: nowrap;
                 box-sizing: border-box;
 
-                height: 30px;
+                min-height: 30px;
 
                 text-align: right;
 
