firefox behaves incorrectly when height is set on td

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -457,6 +457,10 @@
                 }
             }
 
+            tr {
+                height: 30px;
+            }
+
             // cell content styling
             td, th {
                 background-clip: padding-box;
@@ -464,8 +468,6 @@
                 overflow-x: hidden;
                 white-space: nowrap;
                 box-sizing: border-box;
-
-                min-height: 30px;
 
                 text-align: right;
 
