undo bad merge on table.less

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -396,6 +396,14 @@
                 .dash-cell-value {
                     height: 100%;
                     width: 100%;
+
+                    &.unfocused::selection {
+                        background-color: transparent;
+                    }
+
+                    &.unfocused {
+                        caret-color: transparent;
+                    }
                 }
 
                 input.dash-cell-value {
