Add bootstrap to all visual tests - undo `table-` prefix fix temporarily

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -295,7 +295,7 @@
             }
 
             &:not(.dash-empty-11) {
-                .table-row-0 {
+                .row-0 {
                     tr:last-of-type {
                         td, th {
                             border-bottom: none !important;
@@ -344,13 +344,13 @@
             &.dash-virtualized {
                 overflow: hidden !important;
 
-                .table-row-0 {
+                .row-0 {
                     display: flex;
                     flex: 0 0 auto;
                     flex-direction: row;
                 }
 
-                .table-row-1 {
+                .row-1 {
                     display: flex;
                     flex-direction: row;
                     overflow: auto;
