--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -239,12 +239,17 @@
             }
         }
 
-        // This overrides Bootstrap 3.4.1 type="radio" styling
-        // https://github.com/twbs/bootstrap/blob/v3-dev/dist/css/bootstrap.css#L2621
-        // This is not a problem with the latest `in development` 5.0.0-alpha2
         input[type="radio"] {
+            // These override Bootstrap 3.4.1 type="radio" styling
+            // https://github.com/twbs/bootstrap/blob/v3-dev/dist/css/bootstrap.css#L2621
+            // This is not a problem with the latest `in development` 5.0.0-alpha2
             margin: initial;
             line-height: initial;
+            // These override Bootstrap 4.5.0 type="radio" styling
+            // https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap.css#L287
+            // This is not a problem with the latest `in development` 5.0.0-alpha2
+            box-sizing: initial;
+            padding: initial;
         }
 
 	    .dash-spreadsheet-inner {
@@ -308,7 +313,7 @@
             }
 
             &:not(.dash-empty-11) {
-                .table-row-0 {
+                .table-internal-layout-row-0 {
                     tr:last-of-type {
                         td, th {
                             border-bottom: none !important;
@@ -357,13 +362,13 @@
             &.dash-virtualized {
                 overflow: hidden !important;
 
-                .table-row-0 {
+                .dt-table-container__row-0 {
                     display: flex;
                     flex: 0 0 auto;
                     flex-direction: row;
                 }
 
-                .table-row-1 {
+                .dt-table-container__row-1 {
                     display: flex;
                     flex-direction: row;
                     overflow: auto;
