--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -313,7 +313,7 @@
             }
 
             &:not(.dash-empty-11) {
-                .row-0 {
+                .dt-table-container__row-0 {
                     tr:last-of-type {
                         td, th {
                             border-bottom: none !important;
@@ -362,13 +362,13 @@
             &.dash-virtualized {
                 overflow: hidden !important;
 
-                .row-0 {
+                .dt-table-container__row-0 {
                     display: flex;
                     flex: 0 0 auto;
                     flex-direction: row;
                 }
 
-                .row-1 {
+                .dt-table-container__row-1 {
                     display: flex;
                     flex-direction: row;
                     overflow: auto;
