--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -492,9 +492,11 @@
                         padding: 1px;
                     }
                     &.dash-filter--case--sensitive {
-                        border-width: 1px;
-                        border-style: solid;
+                        border-color: hotpink;
                         border-radius: 3px;
+                        border-style: solid;
+                        border-width: 2px;
+                        color: hotpink;
                     }
                 }
             }
@@ -721,12 +723,6 @@
 
             .dash-filter--case {
                 font-size: 10px;
-            }
-
-            .dash-filter--case--sensitive {
-                border-width: 1px;
-                border-style: solid;
-                border-radius: 3px;
             }
 	    }
     }
